Fixed crash on Send Message shortcut checking, when tab was detached and parent window was already destroyed. KAction pointer is replaced with KShortcut object inside every tab's Text Edit.

REVIEW: 109466
BUG: 316484